
syntax = "proto3";

package com.xxlabaza.test.future.service.proto;

option java_package = "com.xxlabaza.test.future.service.proto";
option java_outer_classname = "Proto";


message Action {
  Request request = 1;
  SendTo sendTo = 2;

  message Request {
    string uri = 1;
    HttpMethod method = 2;
    repeated Header headers = 3;
    string body = 4;
  }

  message SendTo {
    string uri = 1;
    HttpMethod method = 2;
    repeated Header headers = 3;
    bool includeResponseHeaders = 4;
  }

  message Header {
    string name = 1;
    string value = 2;
  }

  enum HttpMethod {
    GET = 0;
    HEAD = 1;
    POST = 2;
    PUT = 3;
    PATCH = 4;
    DELETE = 5;
    OPTIONS = 6;
    TRACE = 7;
  }
}
